--- a/Styles/UniBits.css
+++ b/Styles/UniBits.css
@@ -25,7 +25,7 @@ header nav {
     display: flex;
     flex: 1;
     justify-content: flex-end;
-    align-items: flex-start;
+    align-items: center;
     gap: 20px;
 }
 
