--- a/Styles/AboutUs.css
+++ b/Styles/AboutUs.css
@@ -62,28 +62,80 @@ header nav div {
     gap: 10px;
 }
 
-header nav div a {
+header nav div button {
     text-decoration: none;
     padding: 8px 15px;
-    border-radius: 15px; /* To round the edges of the button*/
+    border-radius: 10px; /* To round the edges of the button*/
     font-size: 14px;
     font-weight: bold;
     color: #fff;
     box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
+
+    border: none;
+
 }
 
-header nav div a:first-child {
+button{
+    transition: opacity 0.2s ease-in-out;
+}
+
+button:hover {
+    opacity: 0.6;
+    cursor: pointer;
+
+}
+
+nav .singUp{
     background-color: var(--brandOrange);
-}
+    text-decoration: none;
+    padding: 8px 15px;
+    border-radius: 10px; /* To round the edges of the button*/
+    font-size: 14px;
+    font-weight: bold;
+    color: #fff;
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
 
-header nav div a:last-child {
+    border: none;
+}
+nav .logIn{
     background-color: #ffffff;
-    color: #000;
+    color: black;
+    text-decoration: none;
+    padding: 8px 15px;
+    border-radius: 10px; /* To round the edges of the button*/
+    font-size: 14px;
+    font-weight: bold;
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
+
+    border: none;
 }
 
-header nav div a:hover {
-    opacity: 0.8;
+.logIn{
+    background-color: #F7F7F7;
+    color: black;
+    text-decoration: none;
+    padding: 22px 55px;
+    border-radius: 10px; /* To round the edges of the button*/
+    font-size: 24px;
+    font-weight: bold;
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
+
+    border: none;
 }
+
+.singUp{
+    background-color: var(--brandOrange);
+    text-decoration: none;
+    padding: 22px 55px;
+    border-radius: 10px; /* To round the edges of the button*/
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
+
+    border: none;
+}
+
 
 
 
