--- a/Styles/UniBits.css
+++ b/Styles/UniBits.css
@@ -2,11 +2,12 @@
     --brandOrange: #FF4B33;
 }
 body {
-    font-family: Arial, sans-serif; /*Setting default font*/
+    font-family: Inter, sans-serif; /*Setting default font*/
+    font-weight: normal;
 }
 
 header {
-    display: flex; 
+    display: flex;
     align-items: center;
     padding: 10px 20px;
     background-color: #F7F7F7;
@@ -30,14 +31,16 @@ header nav {
 }
 
 header nav ul {
-    
+
     list-style: none;
     display: flex;
     gap: 34px;
     align-items: center;
-    margin: 0;
     justify-content: flex-end;
+    margin: 0;
     padding: 0;
+    height: 100%;
+
 }
 
 header nav ul li a {
@@ -46,6 +49,8 @@ header nav ul li a {
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
+
+
 }
 
 header nav ul li a:hover {
@@ -57,27 +62,78 @@ header nav div {
     gap: 10px;
 }
 
-header nav div a {
+header nav div button {
     text-decoration: none;
     padding: 8px 15px;
-    border-radius: 15px; /* To round the edges of the button*/
+    border-radius: 10px; /* To round the edges of the button*/
     font-size: 14px;
     font-weight: bold;
     color: #fff;
     box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
+
+    border: none;
+
 }
 
-header nav div a:first-child {
+button{
+    transition: opacity 0.2s ease-in-out;
+}
+
+button:hover {
+    opacity: 0.6;
+    cursor: pointer;
+
+}
+
+nav .singUp{
     background-color: var(--brandOrange);
-}
+    text-decoration: none;
+    padding: 8px 15px;
+    border-radius: 10px; /* To round the edges of the button*/
+    font-size: 14px;
+    font-weight: bold;
+    color: #fff;
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
 
-header nav div a:last-child {
+    border: none;
+}
+nav .logIn{
     background-color: #ffffff;
-    color: #000;
+    color: black;
+    text-decoration: none;
+    padding: 8px 15px;
+    border-radius: 10px; /* To round the edges of the button*/
+    font-size: 14px;
+    font-weight: bold;
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
+
+    border: none;
 }
 
-header nav div a:hover {
-    opacity: 0.8;
+.logIn{
+    background-color: #F7F7F7;
+    color: black;
+    text-decoration: none;
+    padding: 22px 55px;
+    border-radius: 10px; /* To round the edges of the button*/
+    font-size: 24px;
+    font-weight: bold;
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
+
+    border: none;
+}
+
+.singUp{
+    background-color: var(--brandOrange);
+    text-decoration: none;
+    padding: 22px 55px;
+    border-radius: 10px; /* To round the edges of the button*/
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.05);
+
+    border: none;
 }
 
 
