--- a/Styles/ProductDetails.css
+++ b/Styles/ProductDetails.css
@@ -210,6 +210,7 @@ section{
     font-size: 18px;
     font-weight: bold;
     color: #000;
+    text-align: left;
 }
 
 .main-product-details .description{
