very barebones store page + addition of Universalcss.css and adding it to the about us page+ fixed sidebar size in AdminHome

--- a/Styles/AdminHome.css
+++ b/Styles/AdminHome.css
@@ -81,7 +81,7 @@ nav img:hover{
 .sidebar {
     position: fixed; /* Sticks to the left side */
     left: 0;
-    width: 3%; /* Adjust the width as needed */
+    width: 6%; /* Adjust the width as needed */
     height: 100vh; /* Full height of the viewport */
     background-color: #333; /* Dark background */
     color: white;
@@ -101,7 +101,8 @@ nav img:hover{
 }
 
 .sidebar a:hover {
-    background-color: #575757; /* Hover effect */
+    background-color: #575757;
+    border-radius: 4px;
 }
 
 .sidebar-button{
