--- a/Styles/ProductDetails.css
+++ b/Styles/ProductDetails.css
@@ -239,6 +239,12 @@ section{
 
     margin: 5%;
 }
+.related-product:hover{
+    background-color: #f0f0f0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
 
 .related-products-container{
     display: flex;
