--- a/Styles/Products.css
+++ b/Styles/Products.css
@@ -394,5 +394,12 @@ section{
     box-shadow: 10px 10px 26px 2px rgba(0, 0, 0, 0.25);
 
 }
+.product:hover{
+    background-color: #f0f0f0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    cursor: pointer;
+
+}
 
 
