--- a/Styles/Stores.css
+++ b/Styles/Stores.css
@@ -4,59 +4,77 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 8vw;
+    text-align: center;
+    height: 2vw;
     background-color: #f0f0f0;
-    margin-bottom: 10px ;
+    padding: 5vw;
 }
 .Titlecard h1{
     font-size: 2vw;
     color: #333;
-}
-.Search-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 80%;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 16px;
 
 }
+
 .Search{
     width: 100%;
-    height: 100%;
-margin-left: 10vw;
-    margin-right: 10vw;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-
-
+   min-width: 40vw;
+    height: 3vw;
+    padding: 0 15px;
+    font-size: 1rem;
+    border: 1.5px solid #ccc;
+    border-radius: 25px;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
-.Store-container{
-     margin-top: 5vw;
-    margin-left: 25vw;
-    margin-right: 25vw;
-     justify-self: center;
-     display: grid;
-     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-     align-items: center;
-     justify-content: center;
-     width: 100%;
-     height: 100%;
-     padding: 20px;
-     text-align: center;
- }
-.store{
-    display: flex;
-    flex-direction: column;
+.Search:focus {
+    outline: none;
+    border-color: #fd4a33;
+    box-shadow: 0 0 8px rgb(143, 52, 11);
+}
+.Store-container {
+    margin-top: 2vw;
+    margin: 4%;
+    max-width: 1200vw;
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    gap: 30px;
+    padding: 10px;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 0.100vw;
-    border-radius: 5px;
+}
+.store {
+    display: flex;
+    min-height: 10vw;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    padding:0;
+    border-radius: 8px;
     border: 1px solid #ccc;
-    margin-bottom: 10px ;
-    margin: 2vw;
+    background-color: white;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+}
+.store h3{
+    font-size: 1.5vw;
+
+}
+.store p{
+    font-size: 1.2vw;
+    color: #666;
+}
+.store:hover{
+    background-color: #f0f0f0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+.store img {
+    max-width: 100%;
+    width: 49%;
+    height: auto;
+    object-fit: contain;
+    aspect-ratio: 1/1;
+    border-radius: 5px;
 }
