--- a/Styles/Help.css
+++ b/Styles/Help.css
@@ -27,8 +27,12 @@
     font-weight: bold;
     color: white;
     flex-grow: 1;
-}
 
+}
+.logo a{
+    color:white;
+    text-decoration: none;
+}
 /* Navbar Links */
 .navbar .nav-links {
     display: flex;
@@ -46,10 +50,20 @@
 .navbar .nav-links a:hover {
     color: #FF4B33;
 }
-
+.signup-btn {
+    margin-left: 40px;
+    padding: 8px 16px;
+    font-size: 14px;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    background: linear-gradient(to right, #992D1F 0%, #FF4B33 100%);
+    transition: transform 0.2s, background 0.2s;
+}
 
 .login-btn {
-    margin-left: 40px;
+    margin-left: 10px;
     padding: 8px 16px;
     font-size: 14px;
     color: white;
@@ -207,13 +221,14 @@ textarea{
 .footer .footer-links {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-
-    gap: 40px;
+    margin-left: 100px;
+    gap: 50px;
 }
 
 .footer .footer-links a {
+
     text-decoration: none;
     color: white;
     font-size: 16px;
