--- a/Styles/SignUp.css
+++ b/Styles/SignUp.css
@@ -20,13 +20,16 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 100;
 }
-
 .navbar .logo {
     font-size: 24px;
     font-family: "Inter", sans-serif;
     font-weight: bold;
     color: white;
     flex-grow: 1;
+}
+.logo a{
+    color:white;
+    text-decoration: none;
 }
 
 /* Navbar Links */
@@ -201,10 +204,10 @@ body {
 .footer .footer-links {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-
-    gap: 40px;
+    margin-left: 100px;
+    gap: 50px;
 }
 
 .footer .footer-links a {
