--- a/Styles/Universalcss.css
+++ b/Styles/Universalcss.css
@@ -4,6 +4,10 @@
 body {
     font-family: Inter, sans-serif; /*Setting default font*/
     font-weight: normal;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Ensure the body takes up the full viewport height */
+    margin: 0;
 }
 
 header {
@@ -142,4 +146,53 @@ nav .logIn{
 }
 body{
     margin: 0;
+}
+
+
+/* FOOTER STYLING */
+
+
+.footer {
+    background: rgba(20, 20, 20, 0.9);
+    color: white;
+    padding: 30px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    margin-top: auto;
+}
+
+
+.footer .logo {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+
+.footer .footer-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    gap: 40px;
+}
+
+.footer .footer-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-family: "Inter", sans-serif;
+    transition: color 0.3s ease;
+}
+
+.footer .footer-links a:hover {
+    color: #FF4B33;
+}
+
+
+.footer .credentials {
+    font-size: 14px;
+    opacity: 0.7;
 }
