--- a/Styles/AdminHome.css
+++ b/Styles/AdminHome.css
@@ -6,8 +6,8 @@ html, body {
 }
 
 body {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                url("Images/RedBlack.jpg") no-repeat center center fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+                url('../Images/RedBlack.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
