--- a/Styles/Stores.css
+++ b/Styles/Stores.css
@@ -1,3 +1,6 @@
+
+
+/* Section 1 Styling */
 .Titlecard{
 
     display: flex;
@@ -26,11 +29,19 @@
     transition: all 0.3s ease;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
+
 .Search:focus {
     outline: none;
     border-color: #fd4a33;
     box-shadow: 0 0 8px rgb(143, 52, 11);
 }
+
+
+/* ========================================================================================= */
+
+
+/* Section 2 Styling */
+
 .Store-container {
     margin-top: 2vw;
     margin: 4%;
