Fixed image path for the background of the hero section

--- a/Styles/UniBite.css
+++ b/Styles/UniBite.css
@@ -152,7 +152,7 @@ a {
 .Background-Container {
     width: 100%;
     height: 100vh;
-    background-image: url('../Images/k2.png');
+    background-image: url('../Images/HeroBack.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
