--- a/Views/About-us.html
+++ b/Views/About-us.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>About us</title>
-  <link rel="stylesheet" href="Styles/AboutUs.css">
-  <link rel="stylesheet" href="Styles/Universalcss.css">
+  <link rel="stylesheet" href="../Public/Styles/AboutUs.css">
+  <link rel="stylesheet" href="../Public/Styles/Universalcss.css">
 </head>
 
 <body>
