--- a/Views/Help.html
+++ b/Views/Help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Help</title>
-    <link rel="stylesheet" href="Styles/Help.css">
+    <link rel="stylesheet" href="../Public/Styles/Help.css">
 
 </head>
 <body>
