--- a/Views/Products/Product-details.html
+++ b/Views/Products/Product-details.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Product Details</title>
-  <link rel="stylesheet" href="Styles/ProductDetails.css">
-  <link rel="stylesheet" href="Styles/Universalcss.css">
+  <link rel="stylesheet" href="../../Public/Styles/ProductDetails.css">
+  <link rel="stylesheet" href="../../Public/Styles/Universalcss.css">
 </head>
 
 <body>
 <header>
-  <h1 class="logo"><a href="UniBite.html">UniBite.</a></h1>
+  <h1 class="logo"><a href="../UniBite.html">UniBite.</a></h1>
   <nav>
     <ul>
-      <li><a href="Stores.html">Restaurants</a></li>
-      <li><a href="About-us.html">About us</a></li>
-      <li><a href="Help.html">Help</a></li>
+      <li><a href="../Stores.html">Restaurants</a></li>
+      <li><a href="../About-us.html">About us</a></li>
+      <li><a href="../Help.html">Help</a></li>
     </ul>
     <div>
       <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
@@ -27,7 +27,7 @@
 
   <section class="main-product">
     <div class="main-product-image">
-      <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+      <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
     </div>
     <div class="main-product-details">
       <h1>Kiri Falafel Sandwich</h1>
@@ -41,19 +41,19 @@
     <h2>Related Products</h2>
     <div class="related-products-container">
       <div class="related-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
         <button class="addToCart">Add to cart</button>
       </div>
       <div class="related-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
         <button class="addToCart">Add to cart</button>
       </div>
       <div class="related-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
         <button class="addToCart">Add to cart</button>
