--- a/Views/Products/Products.html
+++ b/Views/Products/Products.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Products</title>
-  <link rel="stylesheet" href="Styles/Products.css">
-  <link rel="stylesheet" href="Styles/Universalcss.css">
+  <link rel="stylesheet" href="../../Public/Styles/Products.css">
+  <link rel="stylesheet" href="../../Public/Styles/Universalcss.css">
 
   <header>
-    <h1 class="logo"><a href="UniBite.html">UniBite.</a></h1>
+    <h1 class="logo"><a href="../UniBite.html">UniBite.</a></h1>
     <nav>
       <ul>
-        <li><a href="Stores.html">Restaurants</a></li>
-        <li><a href="About-us.html">About us</a></li>
-        <li><a href="Help.html">Help</a></li>
+        <li><a href="../Stores.html">Restaurants</a></li>
+        <li><a href="../About-us.html">About us</a></li>
+        <li><a href="../Help.html">Help</a></li>
       </ul>
       <div>
         <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
@@ -36,17 +36,17 @@
     <summary>Trending Products</summary>
     <div class="trending-products-container">
       <div class="trending-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
       </div>
       <div class="trending-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
       </div>
       <div class="trending-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
       </div>
@@ -71,19 +71,19 @@
   <h2>Products</h2>
   <div class="products-list-container">
     <div class="product">
-      <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+      <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
       <h3>Kiri Falafel Sandwich</h3>
       <p class="price">30 EGP</p>
       <button class="addToCart">Add to cart</button>
     </div>
     <div class="product">
-      <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+      <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
       <h3>Kiri Falafel Sandwich</h3>
       <p class="price">30 EGP</p>
       <button class="addToCart">Add to cart</button>
     </div>
     <div class="product">
-      <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+      <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
       <h3>Kiri Falafel Sandwich</h3>
       <p class="price">30 EGP</p>
       <button class="addToCart">Add to cart</button>
