--- a/Public/Styles/ProductDetails.css
+++ b/Public/Styles/ProductDetails.css
@@ -9,7 +9,7 @@ main {
 .background {
     width: 100%; /* Stretch from left to right */
     height: 100vh; /* Full height of the viewport */
-    background: url('images/back.jpeg') no-repeat center / cover; /* Proper background shorthand */
+    background: url(' Public/Images/back.jpeg') no-repeat center / cover; /* Proper background shorthand */
     color: white; /* White text for contrast */
     text-align: center; /* Center text alignment */
     display: flex; /* Enable flex layout for centering content */
