--- a/Public/Styles/SignUp.css
+++ b/Public/Styles/SignUp.css
@@ -20,19 +20,18 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 100;
 }
-
 .navbar .logo {
     font-size: 24px;
     font-family: "Inter", sans-serif;
     font-weight: bold;
     color: white;
     flex-grow: 1;
-
 }
 .logo a{
     color:white;
     text-decoration: none;
 }
+
 /* Navbar Links */
 .navbar .nav-links {
     display: flex;
@@ -50,20 +49,10 @@
 .navbar .nav-links a:hover {
     color: #FF4B33;
 }
-.signup-btn {
-    margin-left: 40px;
-    padding: 8px 16px;
-    font-size: 14px;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    background: linear-gradient(to right, #992D1F 0%, #FF4B33 100%);
-    transition: transform 0.2s, background 0.2s;
-}
+
 
 .login-btn {
-    margin-left: 10px;
+    margin-left: 40px;
     padding: 8px 16px;
     font-size: 14px;
     color: white;
@@ -90,7 +79,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/Images/LoginBackGround.jpeg");
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/Public/Images/LoginBackGround.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -107,7 +96,7 @@ body {
 }
 
 
-.request-container {
+.SignUp-container {
     background: white;
     padding: 25px;
     border-radius: 12px;
@@ -115,10 +104,9 @@ body {
     text-align: center;
     width: 450px;
     position: relative;
-    margin: 20px 20px 50px 20px;
 }
 
-.request-container h2 {
+.SignUp-container h2 {
     margin-bottom: 20px;
 }
 
@@ -131,11 +119,6 @@ body {
     font-size: 14px;
 }
 
-textarea{
-    resize: none;
-}
-
-
 .termsAndConditions{
     font-size: 10px;
     color: #828282;
@@ -145,7 +128,7 @@ textarea{
 
 .button-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 10px;
 }
 
@@ -228,7 +211,6 @@ textarea{
 }
 
 .footer .footer-links a {
-
     text-decoration: none;
     color: white;
     font-size: 16px;
