--- a/Views/Auth/SignUp.html
+++ b/Views/Auth/SignUp.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Sign up</title>
-    <link rel="stylesheet" href="Styles/SignUp.css">
+    <link rel="stylesheet" href="../../Public/Styles/SignUp.css">
 </head>
 <body>
 
 <!-- Navbar -->
 <div class="navbar">
-    <div class="logo"><a href="UniBite.html">UniBite.</a></div>
+    <div class="logo"><a href="../UniBite.html">UniBite.</a></div>
     <div class="nav-links">
-        <a href="Stores.html">Restaurants</a>
-        <a href="About-us.html">About Us</a>
-        <a href="Help.html">Help</a>
+        <a href="../Stores.html">Restaurants</a>
+        <a href="../About-us.html">About Us</a>
+        <a href="../Help.html">Help</a>
     </div>
     <button class="login-btn">Login</button>
 </div>
@@ -52,7 +52,7 @@
     <div class="credentials">© 2025 UniBite. All rights reserved.</div>
 </div>
 
-<script src="JavaScript/EmailValidation.js"></script>
+<script src="../../Public/JavaScript/EmailValidation.js"></script>
 
 </body>
 </html>
