--- a/Views/Stores.html
+++ b/Views/Stores.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Stores</title>
-    <link rel="stylesheet" href="Styles/Stores.css">
-    <link rel="stylesheet" href="Styles/Universalcss.css">
+    <link rel="stylesheet" href="../Public/Styles/Stores.css">
+    <link rel="stylesheet" href="../Public/Styles/Universalcss.css">
 </head>
 
 
@@ -43,55 +43,55 @@
     <div class="Store-container">
 
         <div class="store">
-            <img src="Images/corner_upscaled.png" alt="Store 1">
+            <img src="../Public/Images/corner_upscaled.png" alt="Store 1">
             <h3>My corner</h3>
             <p>Foul & Falafel, Crepe.</p>
         </div>
 
         <div class="store">
-            <img src="Images/manoucheh-noBG.png" alt="Store 2">
+            <img src="../Public/Images/manoucheh-noBG.png" alt="Store 2">
             <h3>Manoucheh</h3>
             <p>Manakish, Bakery, Pizza.</p>
         </div>
 
         <div class="store">
-            <img src="Images/sbarro-removebg-preview.png" alt="Store 3">
+            <img src="../Public/Images/sbarro-removebg-preview.png" alt="Store 3">
             <h3>Sbarro</h3>
             <p>Pizza, Salad, Italian.</p>
         </div>
 
         <div class="store">
-            <img src="Images/zalabya-removebg-preview.png" alt="Store 4">
+            <img src="../Public/Images/zalabya-removebg-preview.png" alt="Store 4">
             <h3>Batates & Zalabya</h3>
             <p>Fast food, Dessert.</p>
         </div>
 
         <div class="store">
-            <img src="Images/gyro-noBG.png" alt="Store 5">
+            <img src="../Public/Images/gyro-noBG.png" alt="Store 5">
             <h3>Gyro</h3>
             <p>Wraps, Chicken.</p>
         </div>
 
         <div class="store">
-            <img src="Images/farghaly-noBG.png " alt="Store 6">
+            <img src="../Public/Images/farghaly-noBG.png " alt="Store 6">
             <h3>Farghaly</h3>
             <p>Desserts, Drinks, Salad.</p>
         </div>
 
         <div class="store">
-            <img src="Images/Cinnabon.png " alt="Store 7">
+            <img src="../Public/Images/Cinnabon.png " alt="Store 7">
             <h3>Cinnabon</h3>
             <p>Desserts, Drinks.</p>
         </div>
 
         <div class="store">
-            <img src="Images/TBS.jpg " alt="Store 8">
+            <img src="../Public/Images/TBS.jpg " alt="Store 8">
             <h3>The Bakery Shop</h3>
             <p>Pastries,Drinks, Salad.</p>
         </div>
 
         <div class="store">
-            <img src="Images/Rtogo.png " alt="Store 9">
+            <img src="../Public/Images/Rtogo.png " alt="Store 9">
             <h3>RtoGo</h3>
             <p>Sandwiches , pizza.</p>
         </div>
