--- a/Views/UniBite.html
+++ b/Views/UniBite.html
@@ -6,15 +6,15 @@
     <title>UniBite</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="Styles/UniBite.css" />
-    <link rel="stylesheet" href="Styles/Universalcss.css" />
+    <link rel="stylesheet" href="../Public/Styles/UniBite.css" />
+    <link rel="stylesheet" href="../Public/Styles/Universalcss.css" />
 
     <!-- GSAP + ScrollTrigger -->
-    <script src="JavaScript/gsap.min.js"></script>
-    <script src="JavaScript/ScrollTrigger.min.js"></script>
+    <script src="../Public/JavaScript/gsap.min.js"></script>
+    <script src="../Public/JavaScript/ScrollTrigger.min.js"></script>
 
     <!-- Custom Script -->
-    <script src="JavaScript/UniBite.js"></script>
+    <script src="../Public/JavaScript/UniBite.js"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
 <!-- Section 1 -->
 <div class="Section1">
     <div class="logo-container">
-        <img class="Main-logo" src="Images/LogoVF.png" alt="UniBite Logo">  <!-- UniBite Main Logo -->
+        <img class="Main-logo" src="../Public/Images/LogoVF.png" alt="UniBite Logo">  <!-- UniBite Main Logo -->
     </div>
     <div class="Background-Container"> </div> <!-- Container of the hero section background -->
 
@@ -132,10 +132,10 @@
         <div class="item item1">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/farghaly.jpeg">
+                    <img src="../Public/Images/farghaly.jpeg">
                 </div>
                 <div class="card-back">
-                    <img src="Images/FARGHALYback.jpg">
+                    <img src="../Public/Images/FARGHALYback.jpg">
                     <p>Feeling the heat?</p>
                     <h2>Cool-Down at Farghaly</h2>
                     <button class="view-menu">View Menu</button>
@@ -146,10 +146,10 @@
         <div class="item item2">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/sbarro.png">
+                    <img src="../Public/Images/sbarro.png">
                 </div>
                 <div class="card-back">
-                    <img src="Images/SBARROback.jfif">
+                    <img src="../Public/Images/SBARROback.jfif">
                     <p>Craving a slice of pizza?</p>
                     <h2>Head to Sbarro!</h2>
                     <button class="view-menu">View Menu</button>
@@ -160,10 +160,10 @@
         <div class="item item3">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/TBS.jpg">
+                    <img src="../Public/Images/TBS.jpg">
                 </div>
                 <div class="card-back">
-                    <img src="Images/TBSback.jpg">
+                    <img src="../Public/Images/TBSback.jpg">
                     <p>Freshly baked pastries and Exceptional drinks await!</p>
                     <h2>The Bakery shop</h2>
                     <button class="view-menu">View Menu</button>
@@ -174,10 +174,10 @@
         <div class="item item4">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/zalabya.png">
+                    <img src="../Public/Images/zalabya.png">
                 </div>
                 <div class="card-back">
-                    <img src="Images/ZALABYAback.jpg">
+                    <img src="../Public/Images/ZALABYAback.jpg">
                     <p>Quick Zalabya Snack?</p>
                     <h2>Batates & Zalabya!</h2>
                     <button class="view-menu">View Menu</button>
@@ -188,10 +188,10 @@
         <div class="item item5">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/Cinnabon.png">
+                    <img src="../Public/Images/Cinnabon.png">
                 </div>
                 <div class="card-back">
-                    <img src="Images/CINNABONback.jpeg">
+                    <img src="../Public/Images/CINNABONback.jpeg">
                     <p>Sweet and sticky desert?</p>
                     <h2>Cinnabon is here!</h2>
                     <button class="view-menu">View Menu</button>
@@ -202,10 +202,10 @@
         <div class="item item6">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/gyro.jpeg">
+                    <img src="../Public/Images/gyro.jpeg">
                 </div>
                 <div class="card-back">
-                    <img src="Images/GYROback.jpeg">
+                    <img src="../Public/Images/GYROback.jpeg">
                     <p>Hungry like a greek god?</p>
                     <h2>Gyro for the rescue!</h2>
                     <button class="view-menu">View Menu</button>
@@ -216,10 +216,10 @@
         <div class="item item7">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/corner.png">
+                    <img src="../Public/Images/corner.png">
                 </div>
                 <div class="card-back">
-                    <img src="Images/CORNERback.jpg">
+                    <img src="../Public/Images/CORNERback.jpg">
                     <p>Foul, Falafel, and more!</p>
                     <h2>Only at My Corner</h2>
                     <button class="view-menu">View Menu</button>
@@ -230,10 +230,10 @@
         <div class="item item8">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/Rtogo.png">
+                    <img src="../Public/Images/Rtogo.png">
                 </div>
                 <div class="card-back">
-                    <img src="Images/RTOGOback.jpg">
+                    <img src="../Public/Images/RTOGOback.jpg">
                     <p>Quick bite between lectures?</p>
                     <h2>RtoGO got you</h2>
                     <button class="view-menu">View Menu</button>
@@ -244,10 +244,10 @@
         <div class="item item9">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="Images/manoucheh-noBG.png">
+                    <img src="../Public/Images/manoucheh-noBG.png">
                 </div>
                 <div class="card-back">
-                    <img src="Images/MANback.jpeg">
+                    <img src="../Public/Images/MANback.jpeg">
                     <p>Quick trip to lebanon?</p>
                     <h2>Visit Manoucheh</h2>
                     <button class="view-menu">View Menu</button>
